sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:12: error: ')' expected but ';' found.
    setValeur(j, v);
                   ^AlgShellSort:15: error: Unmatched closing brace '}' ignored here
  }}}
   ^